--- a/.github/workflows/build-and-quality-checks-v3.yml
+++ b/.github/workflows/build-and-quality-checks-v3.yml
@@ -24,7 +24,7 @@ jobs:
         env:
           HUSKY: 0
         run: |
-          npm ci
+          npm ci --no-audit
           npm run setup:ci
 
       - name: Execute quality checks
