--- a/.github/workflows/test-v3.yml
+++ b/.github/workflows/test-v3.yml
@@ -29,7 +29,7 @@ jobs:
         env:
           HUSKY: 0
         run: |
-          npm ci
+          npm ci --no-audit
           npm run setup
           npm run test:ci -- --scope '@rudderstack/analytics-js' --scope '@rudderstack/analytics-js-plugins'
           npm run check:lint -- --scope '@rudderstack/analytics-js' --scope '@rudderstack/analytics-js-plugins'
