--- a/.github/workflows/build-and-quality-checks-v3.yml
+++ b/.github/workflows/build-and-quality-checks-v3.yml
@@ -24,8 +24,8 @@ jobs:
         env:
           HUSKY: 0
         run: |
-          npm ci
-          npm run setup
+          npm ci --no-audit
+          npm run setup:ci
 
       - name: Execute quality checks
         run: |
@@ -36,11 +36,23 @@ jobs:
         run: |
           npm run check:security
 
-      - name: Execute bundle size checks
+      - name: Build artifacts
+        run: npm run check:size:build
+
+      - name: Execute bundle size checks - analytics-js
         uses: rudderlabs/github-action-check-size-limit@v2.0.0
         env:
           HUSKY: 0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          build_script: check:size:build
-          script: npm run check:size:json -- --scope '@rudderstack/analytics-js' --scope '@rudderstack/analytics-js-plugins'
+          skip_step: build
+          script: npm run check:size:json --workspace=@rudderstack/analytics-js
+
+      - name: Execute bundle size checks - analytics-js-plugins
+        uses: rudderlabs/github-action-check-size-limit@v2.0.0
+        env:
+          HUSKY: 0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          skip_step: build
+          script: npm run check:size:json --workspace=@rudderstack/analytics-js-plugins
