--- a/.github/workflows/build-and-quality-checks-v3.yml
+++ b/.github/workflows/build-and-quality-checks-v3.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           skip_step: build
-          script: npm run check:size:json --workspace=@rudderstack/analytics-js
+          script: npm run check:size:json --workspace=@rudderstack/analytics-js --silent
 
       - name: Execute bundle size checks - analytics-js-plugins
         uses: rudderlabs/github-action-check-size-limit@v2.0.0
@@ -55,4 +55,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           skip_step: build
-          script: npm run check:size:json --workspace=@rudderstack/analytics-js-plugins
+          script: npm run check:size:json --workspace=@rudderstack/analytics-js-plugins --silent
