--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -8,8 +8,8 @@
     "clean": "rimraf -rf ./dist && rimraf -rf ./node_modules/.cache && rimraf tsconfig.build.tsbuildinfo",
     "start": "npm run build:v1.1 && npm run build:v3 && npm run start:local",
     "build": "npm run build:browser",
-    "build:v1.1": "cd ../analytics-v1.1 && npm run build:browser && cd ..",
-    "build:v3": "cd ../analytics-js && npm run build:browser && cd ..",
+    "build:v1.1": "cd ../analytics-v1.1 && npm run build:browser",
+    "build:v3": "cd ../analytics-js && npm run build:browser",
     "build:browser:modern": "exit 0",
     "build:browser": "rollup -c --environment TEST_PACKAGE:local",
     "build:npm": "rollup -c --environment TEST_PACKAGE:npm",
