fix(analytics-js): fix sanity suite for v3, fix integrations load detect

--- a/packages/sanity-suite/.env.example
+++ b/packages/sanity-suite/.env.example
@@ -6,3 +6,5 @@ DEST_SDK_BASE_URL=https://cdn.rudderlabs.com/v1.1/js-integrations/
 BUGSNAG_API_KEY=
 BUGSNAG_RELEASE_STAGE=
 CDN_VERSION_PATH=v1.1
+FEATURE_PRELOAD_BUFFER_WRITE_KEY=
+FEATURE_EVENT_FILTERING_WRITE_KEY=
