--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -54,7 +54,7 @@
     "@rudderstack/analytics-js": "*",
     "deep-equal": "2.2.1",
     "object-path": "0.11.8",
-    "rudder-sdk-js": "^2.33.0"
+    "rudder-sdk-js": "2.33.0"
   },
   "devDependencies": {
     "@babel/core": "7.21.8",
