--- a/.github/workflows/build-and-quality-checks-v3.yml
+++ b/.github/workflows/build-and-quality-checks-v3.yml
@@ -44,4 +44,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           skip_step: install
           build_script: check:size:build
-          script: echo "[" && npx lerna exec --loglevel=silent --scope=@rudderstack/analytics-js --scope=@rudderstack/analytics-js-plugins --scope=@rudderstack/analytics-js-service-worker --scope=rudder-sdk-js  -- "npx size-limit --json && echo ," && echo "[]]"
+          script: echo '[' && npx lerna exec --loglevel=silent --scope=@rudderstack/analytics-js --scope=@rudderstack/analytics-js-plugins -- 'npx size-limit --json && echo ,' && echo '[]\n]'
