--- a/packages/analytics-js/package.json
+++ b/packages/analytics-js/package.json
@@ -75,6 +75,7 @@
     "@lukeed/uuid": "2.0.1",
     "@preact/signals-core": "1.3.0",
     "@types/component-emitter": "1.2.11",
+    "component-emitter": "1.3.0",
     "ramda": "0.29.0",
     "storejs": "2.0.5"
   },
