--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "commit": "git-cz",
     "release": "npx standard-version",
     "release:github": "DEBUG=conventional-github-releaser npx conventional-github-releaser -p angular --config github-release.config.js",
-    "postinstall": "patch-package",
+    "postinstall": "patch-package && npx lerna bootstrap",
     "build:v3": "lerna run --concurrency 1 --scope @rudderstack/* build",
     "build:v1.1": "lerna run --concurrency 1 --scope rudder-sdk-js build",
     "build:sanity": "rm -rf packages/sanity-suite/dist && cd packages/sanity-suite && npm run build:all && npm run build:all:staging"
