ci(monorepo): update version of size check action

--- a/.github/workflows/build-and-quality-checks-v3.yml
+++ b/.github/workflows/build-and-quality-checks-v3.yml
@@ -43,6 +43,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           directory: packages/analytics-js/
+          skip_step: install
           build_script: check:size:build
           script: npm run check:size:ci
           is_monorepo: true
@@ -54,6 +55,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           directory: packages/analytics-js-plugins/
+          skip_step: install
           build_script: check:size:build
           script: npm run check:size:ci
           is_monorepo: true
