--- a/.github/workflows/build-and-quality-checks-v3.yml
+++ b/.github/workflows/build-and-quality-checks-v3.yml
@@ -37,11 +37,12 @@ jobs:
           npm run check:security
 
       - name: Execute bundle size checks
-        uses: rudderlabs/github-action-check-size-limit@v2.2.0
+        uses: rudderlabs/github-action-check-size-limit@v2.3.1
         env:
           HUSKY: 0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          skip_step: install
           build_script: check:size:build
-          script: npm run check:size:ci -- --scope '@rudderstack/analytics-js' --scope '@rudderstack/analytics-js-plugins'
+          script: npx lerna exec --loglevel=silent --scope '@rudderstack/analytics-js' --scope '@rudderstack/analytics-js-plugins' -- npx size-limit --json
           is_monorepo: true
