--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "commit": "git-cz",
     "release": "npx standard-version",
     "release:github": "DEBUG=conventional-github-releaser npx conventional-github-releaser -p angular --config github-release.config.js",
-    "postinstall": "patch-package",
+    "postinstall": "patch-package && npx lerna bootstrap",
     "build:v3": "lerna run --concurrency 1 --scope @rudderstack/* build",
     "build:v1.1": "lerna run --concurrency 1 --scope rudder-sdk-js build",
     "build:sanity": "rm -rf packages/sanity-suite/dist && cd packages/sanity-suite && npm run build:all && npm run build:all:staging"
@@ -96,42 +96,42 @@
     "uuid": "8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "7.21.8",
+    "@babel/core": "7.22.1",
     "@babel/eslint-parser": "7.21.8",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-transform-arrow-functions": "7.21.5",
     "@babel/plugin-transform-object-assign": "7.18.6",
-    "@babel/plugin-transform-runtime": "7.21.4",
-    "@babel/preset-env": "7.21.5",
+    "@babel/plugin-transform-runtime": "7.22.4",
+    "@babel/preset-env": "7.22.4",
     "@babel/preset-typescript": "7.21.5",
-    "@commitlint/config-conventional": "17.6.3",
+    "@commitlint/config-conventional": "17.6.5",
     "@commitlint/config-lerna-scopes": "17.6.3",
     "@digitalroute/cz-conventional-changelog-for-jira": "8.0.1",
     "@originjs/vite-plugin-federation": "1.2.2",
     "@rollup/plugin-babel": "6.0.3",
     "@rollup/plugin-commonjs": "25.0.0",
     "@rollup/plugin-json": "6.0.0",
-    "@rollup/plugin-node-resolve": "15.0.2",
+    "@rollup/plugin-node-resolve": "15.1.0",
     "@rollup/plugin-replace": "5.0.2",
-    "@rollup/plugin-terser": "0.4.1",
+    "@rollup/plugin-terser": "0.4.3",
     "@size-limit/file": "8.2.4",
     "@size-limit/webpack": "8.2.4",
     "@types/component-emitter": "1.2.11",
     "@types/crypto-js": "4.1.1",
-    "@types/jest": "29.5.1",
-    "@types/ramda": "0.29.1",
+    "@types/jest": "29.5.2",
+    "@types/ramda": "0.29.2",
     "@types/uuid": "8.3.4",
-    "@typescript-eslint/eslint-plugin": "5.59.6",
-    "@typescript-eslint/parser": "5.59.6",
+    "@typescript-eslint/eslint-plugin": "5.59.9",
+    "@typescript-eslint/parser": "5.59.9",
     "assert": "2.0.0",
     "babel-plugin-transform-object-hasown": "1.1.0",
     "commitizen": "4.3.0",
-    "commitlint": "17.6.3",
+    "commitlint": "17.6.5",
     "conventional-changelog-cli": "2.2.2",
     "conventional-github-releaser": "3.1.5",
     "core-js": "3.30.2",
-    "dotenv": "16.0.3",
-    "eslint": "8.40.0",
+    "dotenv": "16.1.4",
+    "eslint": "8.42.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.0.0",
@@ -154,7 +154,7 @@
     "jscpd": "3.5.9",
     "lerna": "6.6.2",
     "lint-staged": "13.2.2",
-    "madge": "6.0.0",
+    "madge": "6.1.0",
     "msw": "1.2.1",
     "patch-package": "7.0.0",
     "prettier": "2.8.8",
@@ -173,7 +173,7 @@
     "size-limit": "8.2.4",
     "standard-version": "9.5.0",
     "ts-jest": "29.1.0",
-    "tslib": "2.5.0",
+    "tslib": "2.5.3",
     "typescript": "4.9.5",
     "user-agent-data-types": "0.3.1"
   },
