--- a/packages/loading-scripts/package.json
+++ b/packages/loading-scripts/package.json
@@ -28,37 +28,25 @@
     "build": "npm run build:browser",
     "build:browser:modern": "BROWSERSLIST_ENV=modern npm run build:browser",
     "build:browser": "rollup -c --environment VERSION:$npm_package_version,UGLIFY,PROD_DEBUG,ENV:prod",
-    "build:npm": "rollup -c --environment VERSION:$npm_package_version,ENV:prod,MODULE_TYPE:npm",
-    "build:npm:modern": "BROWSERSLIST_ENV=modern npm run build:npm",
-    "build:package": "npm run build:npm:modern && npm run build:npm",
-    "build:browser:test": "ONLY_IIFE=true npm run build:browser && sed 's/var rudderanalytics/rudderanalytics/g' dist/cdn/legacy/iife/rudder-analytics.min.js > __mocks__/cdnSDKv3.js",
     "test": "exit 0",
     "test:ci": "exit 0",
     "check:lint:dev": "eslint --ext .js,.ts src",
     "check:lint": "eslint --ext .js,.ts src -f json -o reports/eslint.json || exit 0",
-    "check:size:build": "npm run clean && npm run build:browser && npm run build:browser:modern && npm run build:package",
-    "check:size": "npm run check:size:build && size-limit",
-    "check:size:json": "size-limit --json",
+    "check:size:build": "exit 0",
+    "check:size": "exit 0",
+    "check:size:json": "exit 0",
     "check:circular": "madge --circular --extensions js,ts src || exit 0",
     "check:support": "NODE_ENV=production npx browserslist --mobile-to-desktop",
     "check:support:modern": "NODE_ENV=modern npx browserslist --mobile-to-desktop",
     "check:duplicates": "jscpd src",
     "check:security": "npm audit --recursive --audit-level=high",
     "start:modern": "BROWSERSLIST_ENV=modern npm run start",
-    "build:modern": "npm run build:browser:modern && npm run build:npm:modern",
-    "package": "cd dist/npm && rimraf -rf ./dts && npm pack --pack-destination ../../",
-    "release": "npm publish"
+    "build:modern": "npm run build:browser:modern"
   },
   "engines": {
     "node": ">=v16"
   },
-  "dependencies": {
-    "@lukeed/uuid": "2.0.1",
-    "@preact/signals-core": "1.3.0",
-    "@types/component-emitter": "1.2.11",
-    "ramda": "0.29.0",
-    "storejs": "2.0.5"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "7.21.8",
     "@babel/eslint-parser": "7.21.8",
