--- a/packages/loading-scripts/package.json
+++ b/packages/loading-scripts/package.json
@@ -20,10 +20,11 @@
   "homepage": "https://github.com/rudderlabs/rudder-sdk-js/blob/master/README.md",
   "scripts": {
     "clean": "rimraf -rf ./dist && rimraf -rf ./node_modules/.cache && rimraf tsconfig.build.tsbuildinfo",
-    "start": "rollup -c --watch --environment DEV_SERVER,PROD_DEBUG",
+    "start": "rollup -c --watch",
     "build": "npm run build:browser",
     "build:browser:modern": "exit 0",
-    "build:browser": "rollup -c --environment VERSION:$npm_package_version,UGLIFY,PROD_DEBUG,ENV:prod",
+    "build:browser:minified": "rollup -c --environment UGLIFY",
+    "build:browser": "rollup -c && npm run build:browser:minified",
     "test": "exit 0",
     "test:ci": "exit 0",
     "check:lint:dev": "eslint --ext .js,.ts src",
@@ -33,7 +34,7 @@
     "check:size:json": "exit 0",
     "check:circular": "madge --circular --extensions js,ts src || exit 0",
     "check:support": "NODE_ENV=production npx browserslist --mobile-to-desktop",
-    "check:support:modern": "NODE_ENV=modern npx browserslist --mobile-to-desktop",
+    "check:support:modern": "exit 0",
     "check:duplicates": "jscpd src",
     "check:security": "npm audit --recursive --audit-level=high",
     "build:modern": "npm run build:browser:modern"
@@ -43,40 +44,29 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "7.21.8",
-    "@babel/eslint-parser": "7.21.8",
+    "@babel/core": "7.22.5",
+    "@babel/eslint-parser": "7.22.5",
     "@babel/plugin-proposal-class-properties": "7.18.6",
-    "@babel/plugin-transform-arrow-functions": "7.21.5",
-    "@babel/plugin-transform-object-assign": "7.18.6",
-    "@babel/plugin-transform-runtime": "7.21.4",
-    "@babel/preset-env": "7.21.5",
-    "@babel/preset-typescript": "7.21.5",
-    "@commitlint/config-conventional": "17.6.3",
+    "@babel/plugin-transform-arrow-functions": "7.22.5",
+    "@babel/plugin-transform-object-assign": "7.22.5",
+    "@babel/plugin-transform-runtime": "7.22.5",
+    "@babel/preset-env": "7.22.5",
+    "@babel/preset-typescript": "7.22.5",
+    "@commitlint/config-conventional": "17.6.5",
     "@commitlint/config-lerna-scopes": "17.6.3",
     "@digitalroute/cz-conventional-changelog-for-jira": "8.0.1",
-    "@originjs/vite-plugin-federation": "1.2.2",
-    "@rollup/plugin-alias": "5.0.0",
     "@rollup/plugin-babel": "6.0.3",
-    "@rollup/plugin-commonjs": "25.0.0",
-    "@rollup/plugin-json": "6.0.0",
-    "@rollup/plugin-node-resolve": "15.0.2",
     "@rollup/plugin-replace": "5.0.2",
-    "@rollup/plugin-terser": "0.4.1",
-    "@size-limit/file": "8.2.4",
-    "@size-limit/webpack": "8.2.4",
-    "@types/jest": "29.5.1",
-    "@types/ramda": "0.29.1",
-    "@typescript-eslint/eslint-plugin": "5.59.6",
-    "@typescript-eslint/parser": "5.59.6",
-    "assert": "2.0.0",
+    "@rollup/plugin-terser": "0.4.3",
+    "@types/jest": "29.5.2",
+    "@typescript-eslint/eslint-plugin": "5.59.11",
+    "@typescript-eslint/parser": "5.59.11",
     "babel-eslint": "10.1.0",
     "babel-plugin-transform-object-hasown": "1.1.0",
     "commitizen": "4.3.0",
-    "commitlint": "17.6.3",
-    "conventional-changelog-cli": "2.2.2",
-    "conventional-github-releaser": "3.1.5",
-    "dotenv": "16.0.3",
-    "eslint": "8.40.0",
+    "commitlint": "17.6.5",
+    "dotenv": "16.1.4",
+    "eslint": "8.42.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.0.0",
@@ -86,10 +76,7 @@
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-sonarjs": "0.19.0",
     "eslint-plugin-unicorn": "47.0.0",
-    "esm": "3.2.25",
-    "http-server": "14.1.1",
     "husky": "8.0.3",
-    "isomorphic-fetch": "3.0.0",
     "jest": "29.5.0",
     "jest-date-mock": "1.0.8",
     "jest-environment-jsdom": "29.5.0",
@@ -98,26 +85,12 @@
     "jest-watch-typeahead": "2.2.2",
     "jscpd": "3.5.9",
     "lint-staged": "13.2.2",
-    "madge": "6.0.0",
-    "msw": "1.2.1",
-    "patch-package": "7.0.0",
+    "madge": "6.1.0",
     "prettier": "2.8.8",
     "rollup": "3.20.2",
     "rollup-plugin-copy": "3.4.0",
-    "rollup-plugin-dts": "5.3.0",
-    "rollup-plugin-exclude-dependencies-from-bundle": "1.1.23",
-    "rollup-plugin-external-globals": "0.8.0",
-    "rollup-plugin-filesize": "10.0.0",
-    "rollup-plugin-generate-html-template": "1.7.0",
-    "rollup-plugin-livereload": "2.0.5",
-    "rollup-plugin-polyfill-node": "0.12.0",
-    "rollup-plugin-serve": "2.0.2",
     "rollup-plugin-typescript2": "0.34.1",
-    "rollup-plugin-visualizer": "5.9.0",
-    "size-limit": "8.2.4",
-    "standard-version": "9.5.0",
     "ts-jest": "29.1.0",
-    "tslib": "2.5.0",
     "typescript": "4.9.5"
   },
   "overrides": {},
