--- a/packages/analytics-js-plugins/package.json
+++ b/packages/analytics-js-plugins/package.json
@@ -72,8 +72,8 @@
   },
   "dependencies": {
     "@lukeed/uuid": "2.0.1",
-    "@types/component-emitter": "1.2.11",
     "@preact/signals-core": "1.3.0",
+    "@types/component-emitter": "1.2.11",
     "component-emitter": "1.3.0",
     "crypto-js": "4.1.1",
     "ramda": "0.29.0"
@@ -87,6 +87,7 @@
     "@babel/plugin-transform-runtime": "7.22.4",
     "@babel/preset-env": "7.22.4",
     "@babel/preset-typescript": "7.21.5",
+    "@bugsnag/core": "6.5.0",
     "@commitlint/config-conventional": "17.6.5",
     "@commitlint/config-lerna-scopes": "17.6.3",
     "@digitalroute/cz-conventional-changelog-for-jira": "8.0.1",
