--- a/.github/workflows/test-v3.yml
+++ b/.github/workflows/test-v3.yml
@@ -25,13 +25,19 @@ jobs:
           node-version-file: '.nvmrc'
           cache: 'npm'
 
-      - name: Execute unit tests
+      - name: Install dependencies
         env:
           HUSKY: 0
         run: |
           npm ci --no-audit
           npm run setup
+
+      - name: Execute unit tests
+        run: |
           npm run test:ci -- --scope '@rudderstack/analytics-js' --scope '@rudderstack/analytics-js-plugins'
+
+      - name: Execute linting check
+        run: |
           npm run check:lint -- --scope '@rudderstack/analytics-js' --scope '@rudderstack/analytics-js-plugins'
 
       - name: Fix filesystem paths in generated reports
