--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "@vespaiach/axios-fetch-adapter": "0.3.1",
     "assert": "2.0.0",
     "axios": "0.27.2",
-    "axios-retry": "3.4.0",
+    "axios-retry": "3.5.1",
     "component-each": "0.2.6",
     "component-emitter": "1.3.0",
     "component-querystring": "2.0.1",
@@ -103,32 +103,32 @@
     "uuid": "8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "7.21.8",
-    "@babel/eslint-parser": "7.21.8",
+    "@babel/core": "7.22.9",
+    "@babel/eslint-parser": "7.22.9",
     "@babel/plugin-proposal-class-properties": "7.18.6",
-    "@babel/plugin-transform-arrow-functions": "7.21.5",
-    "@babel/plugin-transform-object-assign": "7.18.6",
-    "@babel/preset-env": "7.21.5",
-    "@commitlint/config-conventional": "17.6.3",
+    "@babel/plugin-proposal-private-methods": "7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@babel/plugin-transform-arrow-functions": "7.22.5",
+    "@babel/plugin-transform-object-assign": "7.22.5",
+    "@babel/preset-env": "7.22.9",
+    "@commitlint/config-conventional": "17.6.6",
     "@digitalroute/cz-conventional-changelog-for-jira": "8.0.1",
     "@rollup/plugin-babel": "6.0.3",
-    "@rollup/plugin-commonjs": "25.0.0",
+    "@rollup/plugin-commonjs": "25.0.2",
     "@rollup/plugin-json": "6.0.0",
-    "@rollup/plugin-node-resolve": "15.0.2",
+    "@rollup/plugin-node-resolve": "15.1.0",
     "@rollup/plugin-replace": "5.0.2",
-    "@size-limit/file": "8.2.4",
-    "@size-limit/webpack": "8.2.4",
+    "@size-limit/file": "8.2.6",
+    "@size-limit/webpack": "8.2.6",
     "babel-eslint": "10.1.0",
-    "babel-jest": "^29.4.3",
+    "babel-jest": "29.6.1",
     "babel-plugin-transform-object-hasown": "1.1.0",
     "commitizen": "4.3.0",
-    "commitlint": "17.6.3",
+    "commitlint": "17.6.6",
     "conventional-changelog-cli": "2.2.2",
     "conventional-github-releaser": "3.1.5",
-    "dotenv": "16.0.3",
-    "esbuild": "0.17.19",
-    "esbuild-jest": "0.5.0",
-    "eslint": "8.40.0",
+    "dotenv": "16.3.1",
+    "eslint": "8.44.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "8.8.0",
@@ -139,14 +139,14 @@
     "esm": "3.2.25",
     "husky": "8.0.3",
     "isomorphic-fetch": "3.0.0",
-    "jest": "29.5.0",
+    "jest": "29.6.1",
     "jest-date-mock": "1.0.8",
-    "jest-environment-jsdom": "29.5.0",
+    "jest-environment-jsdom": "29.6.1",
     "jest-sonar": "0.2.16",
     "jscpd": "3.5.9",
-    "lint-staged": "13.2.2",
-    "madge": "6.0.0",
-    "msw": "1.2.1",
+    "lint-staged": "13.2.3",
+    "madge": "6.1.0",
+    "msw": "1.2.2",
     "prettier": "2.8.8",
     "rollup": "2.79.1",
     "rollup-plugin-copy": "3.4.0",
@@ -156,8 +156,8 @@
     "rollup-plugin-polyfill-node": "0.12.0",
     "rollup-plugin-serve": "2.0.2",
     "rollup-plugin-terser": "7.0.2",
-    "rollup-plugin-visualizer": "5.9.0",
-    "size-limit": "8.2.4",
+    "rollup-plugin-visualizer": "5.9.2",
+    "size-limit": "8.2.6",
     "standard-version": "9.5.0"
   },
   "overrides": {
