fix(analytics-js): buffer events if load is not in preloaded events

--- a/lerna.json
+++ b/lerna.json
@@ -4,22 +4,16 @@
   "useWorkspaces": true,
   "command": {
     "version": {
-      "allowBranch": [
-        "v3-staging",
-        "v3-release/*",
-        "v3-hotfix-release/*",
-        "v3-production",
-        "master",
-        "develop"
-      ],
+      "allowBranch": ["v3-staging", "v3-release/*", "v3-hotfix-release/*", "develop"],
       "message": "chore(release): bump up package versions [skip ci]",
       "conventionalCommits": true
     },
     "publish": {
       "ignoreChanges": [
-        "**/__tests__/**",
-        "**/__mocks__/**",
         "**/__fixtures__/**",
+        "**/__mocks__/**",
+        "**/__tests__/**",
+        "public",
         "tsconfig.*",
         "*.config.*",
         "*.md",
