--- a/packages/loading-scripts/package.json
+++ b/packages/loading-scripts/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@rudderstack/analytics-js-loading-script",
   "version": "3.0.0",
+  "private": true,
   "description": "Loading script for RudderStack Javascript SDK",
   "main": "./src/index.js",
   "keywords": [
